8253412: Unsupported GC options passed in JAVA_TOOL_OPTIONS are silently ignored